--- a/custom_components/octopus_french/manifest.json
+++ b/custom_components/octopus_french/manifest.json
@@ -1,11 +1,12 @@
 {
-    "domain": "octopus_french",
-    "name": "Octopus Energy French",
-    "codeowners": ["@Domodom30"],
-    "config_flow": true,
-    "dependencies": [],
-    "documentation": "https://github.com/Domodom30/ha-octopus_french",
-    "integration_type": "hub",
-    "iot_class": "cloud_polling",
-    "version": "1.0.0"
-  }
+  "domain": "octopus_french",
+  "name": "Octopus Energy French",
+  "codeowners": ["@domodom30"],
+  "config_flow": true,
+  "dependencies": [],
+  "documentation": "https://github.com/domodom30/ha-octopus_french",
+  "issue_tracker": "https://github.com/MiguelAngelLV/issues",
+  "iot_class": "local_polling",
+  "requirements": ["python-graphql-client==0.4.3"],
+  "version": "0.1.0"
+}
