--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -1,22 +1,26 @@
-name: HACS Action
+name: Validate with hassfest
 
 on:
   push:
-    branches: [main, master]
   pull_request:
-    branches: [main, master]
   schedule:
-    - cron: '0 0 * * *'
+    - cron:  '0 0 * * *'
 
 jobs:
+  validate:
+    runs-on: "ubuntu-latest"
+    steps:
+        - uses: "actions/checkout@v3"
+        - uses: "home-assistant/actions/hassfest@master"
+        
   hacs:
     name: HACS Validation
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: ⤵️ Check out code from GitHub
+        uses: actions/checkout@v3
 
-      - name: HACS Action
+      - name: 🚀 Run HACS validation
         uses: hacs/action@main
         with:
           category: integration
