--- a/custom_components/octopus_french/manifest.json
+++ b/custom_components/octopus_french/manifest.json
@@ -5,8 +5,8 @@
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/domodom30/ha-octopus_french",
-  "issue_tracker": "https://github.com/MiguelAngelLV/issues",
   "iot_class": "local_polling",
+  "issue_tracker": "https://github.com/domodom30/issues",
   "requirements": ["python-graphql-client==0.4.3"],
-  "version": "0.1.0"
+  "version": "1.0.0"
 }
