--- a/custom_components/octopus_french/manifest.json
+++ b/custom_components/octopus_french/manifest.json
@@ -7,6 +7,6 @@
   "documentation": "https://github.com/domodom30/ha-octopus_french",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/domodom30/issues",
-  "requirements": ["python-graphql-client==0.4.3"],
-  "version": "1.0.0"
+  "requirements": [],
+  "version": "0.1.0"
 }
