--- a/custom_components/octopus_french/manifest.json
+++ b/custom_components/octopus_french/manifest.json
@@ -1,12 +1,11 @@
 {
-  "domain": "octopus_french",
-  "name": "Octopus Energy French",
-  "codeowners": ["@domodom30"],
-  "config_flow": true,
-  "dependencies": [],
-  "documentation": "https://github.com/domodom30/ha-octopus_french",
-  "iot_class": "local_polling",
-  "issue_tracker": "https://github.com/domodom30/issues",
-  "requirements": [],
-  "version": "0.1.0"
-}
+    "domain": "octopus_french",
+    "name": "Octopus Energy French",
+    "codeowners": ["@Domodom30"],
+    "config_flow": true,
+    "dependencies": [],
+    "documentation": "https://github.com/Domodom30/ha-octopus_french",
+    "integration_type": "hub",
+    "iot_class": "cloud_polling",
+    "version": "0.1.0"
+  }
