--- a/custom_components/octopus_french/manifest.json
+++ b/custom_components/octopus_french/manifest.json
@@ -4,8 +4,10 @@
   "codeowners": ["@domodom30"],
   "config_flow": true,
   "dependencies": [],
+  "requirements": [],
+  "integration_type": "service",
   "documentation": "https://github.com/domodom30/ha-octopus_french",
-  "iot_class": "local_polling",
+  "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/domodom30/ha-octopus-french/issues",
-  "version": "0.1.0"
+  "version": "1.6.0"
 }
