--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -1,18 +1,23 @@
-name: Validate with hassfest
+name: Validate and Release
 
 on:
   push:
+    paths:
+      - 'custom_components/octopus_french/manifest.json'  # Déclenche aussi le tag/release
+      - '**/*.py'
+      - '.github/workflows/**'
   pull_request:
   schedule:
-    - cron:  '0 0 * * *'
+    - cron: '0 0 * * *'
 
 jobs:
   validate:
-    runs-on: "ubuntu-latest"
+    name: Validate with hassfest
+    runs-on: ubuntu-latest
     steps:
-        - uses: "actions/checkout@v3"
-        - uses: "home-assistant/actions/hassfest@master"
-        
+      - uses: actions/checkout@v3
+      - uses: home-assistant/actions/hassfest@master
+
   hacs:
     name: HACS Validation
     runs-on: ubuntu-latest
@@ -24,3 +29,48 @@ jobs:
         uses: hacs/action@main
         with:
           category: integration
+
+  tag-and-release:
+    name: Tag and Release on manifest.json version change
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    if: contains(github.event.head_commit.message, 'release') || github.event_name == 'push'
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Extract version from manifest.json
+        id: get_version
+        run: |
+          VERSION=$(jq -r '.version' custom_components/octopus_french/manifest.json)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Check if tag exists
+        id: check_tag
+        run: |
+          if git rev-parse "v${VERSION}" >/dev/null 2>&1; then
+            echo "Tag exists"
+            echo "EXISTS=true" >> $GITHUB_ENV
+          else
+            echo "Tag does not exist"
+            echo "EXISTS=false" >> $GITHUB_ENV
+          fi
+
+      - name: Create tag and push
+        if: env.EXISTS == 'false'
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git tag "v${VERSION}"
+          git push origin "v${VERSION}"
+
+      - name: Create GitHub Release with auto-generated notes
+        if: env.EXISTS == 'false'
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ env.VERSION }}
+          name: v${{ env.VERSION }}
+          generate_release_notes: true
