--- a/custom_components/octopus_french/manifest.json
+++ b/custom_components/octopus_french/manifest.json
@@ -3,6 +3,7 @@
   "name": "Octopus Energy French",
   "codeowners": ["@domodom30"],
   "config_flow": true,
+  "after_dependencies": ["recorder"],
   "dependencies": [],
   "documentation": "https://github.com/domodom30/ha-octopus-french",
   "integration_type": "service",
